Fix: grammar; calendar styles; names on mobile layout

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -173,15 +173,14 @@ $week-cell-padding-today: subtract(0.4rem, $today-border-size) subtract(0.6rem, 
       }
 
       &:hover:not(.invisible, .disabled, .past, .today, .selected) {
-        background-color: $selected-color !important;
-        background-image: linear-gradient(347deg, #6a4156 0%, #344356 40%, #0c1a30 100%);
+        //background-color: $selected-color !important;
+        //background-image: linear-gradient(347deg, #6a4156 0%, #344356 40%, #0c1a30 100%);
+        background-color: #c4d1e6;
 
         .title {
-          color: #fff;
         }
 
         .entry {
-          color: white;
         }
       }
 
